--- a/app/src/main/res/layout/row_book_item.xml
+++ b/app/src/main/res/layout/row_book_item.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_margin="8dp"
@@ -23,7 +23,7 @@
                 android:scaleType="centerCrop"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:srcCompat="@drawable/book_cover" />
+                tools:srcCompat="@drawable/cover_not_avaliable" />
 
             <TextView
                 android:layout_margin="4dp"
